--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample Node.js app using Express 4",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "forever start server.js",
     "webpack": "webpack-dev-server --progress --inline",
     "production": "webpack -p",
     "watch": "webpack --watch --progress"
@@ -20,6 +20,7 @@
     "debug": "~2.2.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "forever": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
